# ais_monitorfirmware

./: CMakeLists.txt  Log.md  partitions_nvs_app.csv  platformio.ini  sdkconfig.esp32dev
components/ais_commonlib/: CMakeLists.txt  README  generate_cmakelists.py
components/ais_framework/: CMakeLists.txt  README  generate_cmakelists.py
components/ais_framework/include/HAL/HAL_ABSTRACT/: esp32nowmanagerabstract.h  flashmanagerabstract.h  haladcabstract.h  halflashabstract.h  halgpioabstract.h  hali2cabstract.h  halspiabstract.h  haluartabstract.h  mqttclientabstract.h  touchsensorabstract.h  udpabstract.h  webservermanagerabstract.h  wifimanagerabstract.h
components/ais_framework/include/HAL/HAL_ESP32/: esp32adc.h  esp32gpio.h  esp32i2c.h  esp32nowmanager.h  esp32spi.h  esp32touch.h  esp32uart.h  flashmanager.h  mqttclientesp32.h  sntpmanager.h  udpesp32.h  wifimanager.h
components/ais_framework/include/OSAL/: README.txt  RTOSAllocator.h
components/ais_framework/include/OSAL/ESP32/: OSFreeRTOS.h
components/ais_framework/include/OSAL/Platform/: EventTimer.h  EventTimerBase.h  OSBase.h
components/sx127x/: CMakeLists.txt  sx127x.cpp
components/sx127x/include/: sx127x.h
docs/: logic_spec.md  roadmap.md  schematic.md
include/: MyMain.h  ais_monitorfirmware.code-workspace  lora_config.h
include/common/: common.h  ds18b20.h  lora_packet.h
include/task/: lora_task.h  sensor_measure_task.h
src/: MyMain.cpp  main.c
src/common/: common.cpp  ds18b20.cpp
src/task/: lora_task.cpp  sensor_measure_task.cpp  taskabstract_override.cpp  taskmanager_override.cpp
(+6 files in other folders)
